--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,4 +1,4 @@
-#nixpack.toml
+#nixpacks.toml
 
 [start]
-command = "gunicorn app:app --bind 0.0.0.0:$PORT"
+cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
