--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,7 @@
 #nixpacks.toml
 
 [phases.setup]
-nixPkgs = ["ffmpeg"]
+nixPkgs = ["python310", "ffmpeg", "which"]
 
 [start]
 cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
